picture stretch fixed

--- a/src/sass/_content.scss
+++ b/src/sass/_content.scss
@@ -50,10 +50,13 @@
       .review {
         width: 100%;
         height: 20vh;
+        display: flex;
+        justify-content: center;
 
         img {
-          width: 100%;
-          height: 100%;
+          // width: 100%;
+          max-height: 100%;
+          object-fit: contain;
         }
       }
     }
